# LRA

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  readme.md
data/rcws/pwm_cmd_file/: FORCE_LINEAR_APM_0.15_Single_ENERGY_0.csv  FORCE_LINEAR_STFTM_f0-f0.3_0.15_Single_ABS_MAX_0.csv  FORCE_LINEAR_STFTM_f0-f0.3_0.15_Single_ENERGY_0.csv  FORCE_LINEAR_STFTM_f0-f0.3_0.15_ThreeAxes_0.csv  FORCE_LINEAR_TSM_0.15_Single_ENERGY_0.csv  acc_pwm_map.csv  acc_pwm_map_fixed.csv  acc_pwm_map_fixed_v2.csv  demo_1.csv  demo_sin_2.csv  dynamic_acc_pwm_map.csv
sh/FrameGraph/util_tool/: cmd.sh
src/: CMakeLists.txt
src/bus/: CMakeLists.txt  bus.h
src/bus/i2c/: CMakeLists.txt  i2c.cc  i2c.h  i2c_sys.cc  i2c_sys.h
src/bus/spi/: spi.h
src/bus_adapter/: CMakeLists.txt  bus_adapter.h
src/bus_adapter/i2c_adapter/: CMakeLists.txt  i2c_adapter.cc  i2c_adapter.h
src/bus_adapter/spi_adapter/: spi_adapter.cc  spi_adapter.h
src/controller/: CMakeLists.txt  controller.cc  controller.h
src/device/: CMakeLists.txt  device.h  device_info.h
src/device/adxl355/: CMakeLists.txt  adxl355.cc  adxl355.h
src/device/bus/: bus.h
src/device/drv2605l/: CMakeLists.txt  drv2605l.cc  drv2605l.h
src/device/fields/: fields.h
src/device/registers/: registers.h
src/device/tca/: CMakeLists.txt  tca.cc  tca.h
src/main/: CMakeLists.txt  main.cc  main.h
src/memory/: CMakeLists.txt
src/memory/fields/: fields.h
src/memory/registers/: CMakeLists.txt  registers.h
src/util/: CMakeLists.txt
src/util/concepts/: CMakeLists.txt  concepts.h
src/util/device/: device.h
src/util/errors/: CMakeLists.txt  errors.h
src/util/log/: CMakeLists.txt  log.cc  log.h  logunit.cc  logunit.h
src/util/terminal/: CMakeLists.txt  terminal.cc  terminal.h
src/util/thread/: thread.h
src/util/timer/: CMakeLists.txt  timer.cc  timer.h
src/websocket/: CMakeLists.txt  websocket.cc  websocket.h
test/: CMakeLists.txt
test/device_test/: CMakeLists.txt
test/device_test/tca_test/: CMakeLists.txt  i2c_directly_call_test.cc  tca_test.cc
test/i2c/: i2c.c  i2c_test  i2c_test.cc
test/i2c_unit_test/: CMakeLists.txt  i2c_unit_test.cc
test/log_test/: CMakeLists.txt  default_logger_test.cc  log_test.cc
test/port_listen_test/: port_listen_test.py
test/serial_read_usb_test/: CMakeLists.txt  cdc_acm_list_devices.cpp  serial_test  speed_test.py
test/temp/: CMakeLists.txt  temp_spdlog_test.cc
test/timer_test/: CMakeLists.txt  timer_test.cc
test/usb_test/: CMakeLists.txt  readme.md  usb_test.cc
test/usb_test/data/: f10000.csv
test/usb_test/inc/: CMakeLists.txt
test/usb_test/inc/drv_stm_lib/: CMakeLists.txt  lra_usb_defines.cc  lra_usb_defines.h  lra_usb_defines.hpp
test/usb_test/inc/fft_lib/: CMakeLists.txt
test/usb_test/inc/fft_lib/fft_wrapper/: fft_helper.hpp
test/usb_test/inc/fft_lib/file_loader/: cnc_file_loader.hpp
test/usb_test/inc/host_usb_lib/: CMakeLists.txt
test/usb_test/inc/host_usb_lib/cdcDevice/: msg_generator.hpp  rcws.cc  rcws.h  rcws.hpp  rcws_info.hpp
test/usb_test/inc/host_usb_lib/command/: command.hpp  command_impl.hpp  command_stack.hpp  function_info.hpp
test/usb_test/inc/host_usb_lib/logger/: CMakeLists.txt  logger.cc  logger.h  logger.hpp
test/usb_test/inc/host_usb_lib/parser/: parser.hpp  rcws_parser.cc  rcws_parser.h  rcws_parser.hpp  ui_parser.hpp
test/usb_test/inc/host_usb_lib/realtime/: realtime_plot.cc  realtime_plot.h
test/usb_test/inc/host_usb_lib/userInput/: non_blocking_input.hpp
test/usb_test/inc/realtime_lib/: CMakeLists.txt  realtime_plot.cc  realtime_plot.h
test/usb_test/inc/util/: constexpr_args.hpp
test/usb_test/inc/util_lib/: CMakeLists.txt  block_checker.cc  block_checker.h  range_bound.hpp
test/usb_test/script/: realtime_plot.py  test.py  updateUSBip.sh
test/usb_test/src/: CMakeLists.txt
test/usb_test/src/detect_usb/: detect_usb  detect_usb.cc
test/usb_test/src/usb_test_v1.0/: CMakeLists.txt  readme.md  usb_test_v1.0.cc
test/usb_test/src/usb_test_v1.1/: CMakeLists.txt  readme.md  usb_test_v1.1.cc
