# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/timer_test)
# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/log_test)
# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/temp)

# Add in branch i2c_unittest
# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/i2c_unit_test)

# Device test
# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/device_test)

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/usb_test)